@@ -36,6 +36,7 @@ import net.fabricmc.loader.api.FabricLoader;
 import net.fabricmc.loader.api.metadata.ModMetadata;
 import net.minecraft.client.MinecraftClient;
 import net.minecraft.client.gui.screen.ChatScreen;
+import net.minecraft.util.Identifier;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -65,6 +66,9 @@ public class MeteorClient implements ClientModInitializer {
 
         String versionString = MOD_META.getVersion().getFriendlyString();
         if (versionString.contains("-")) versionString = versionString.split("-")[0];
+
+        // When building and running through IntelliJ and not Gradle it doesn't replace the version so just use a dummy
+        if (versionString.equals("${version}")) versionString = "0.0.0";
 
         VERSION = new Version(versionString);
         DEV_BUILD = MOD_META.getCustomValue(MeteorClient.MOD_ID + ":devbuild").getAsString();
@@ -160,7 +164,7 @@ public class MeteorClient implements ClientModInitializer {
 
     private void toggleGui() {
         if (Utils.canCloseGui()) mc.currentScreen.close();
-        else if (Utils.canOpenGui()) Tabs.get().get(0).openScreen(GuiThemes.get());
+        else if (Utils.canOpenGui()) Tabs.get().getFirst().openScreen(GuiThemes.get());
     }
 
     // Hide HUD
@@ -179,5 +183,9 @@ public class MeteorClient implements ClientModInitializer {
         }
 
         wasWidgetScreen = event.screen instanceof WidgetScreen;
+    }
+
+    public static Identifier identifier(String path) {
+        return Identifier.of(MeteorClient.MOD_ID, path);
     }
 }
