@@ -11,11 +11,17 @@ import meteordevelopment.meteorclient.addons.GithubRepo;
 import meteordevelopment.meteorclient.addons.MeteorAddon;
 import meteordevelopment.meteorclient.gui.GuiThemes;
 import meteordevelopment.meteorclient.gui.screens.CommitsScreen;
+import meteordevelopment.meteorclient.mixininterface.IText;
 import meteordevelopment.meteorclient.utils.network.Http;
 import meteordevelopment.meteorclient.utils.network.MeteorExecutor;
-import meteordevelopment.meteorclient.utils.render.color.Color;
-import net.minecraft.client.util.math.MatrixStack;
+import meteordevelopment.meteorclient.utils.render.MeteorToast;
+import net.minecraft.client.gui.DrawContext;
+import net.minecraft.item.Items;
+import net.minecraft.text.MutableText;
+import net.minecraft.text.Text;
+import net.minecraft.util.Formatting;
 
+import java.net.http.HttpResponse;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
@@ -23,11 +29,10 @@ import java.util.List;
 import static meteordevelopment.meteorclient.MeteorClient.mc;
 
 public class TitleScreenCredits {
-    private static final int WHITE = Color.fromRGBA(255, 255, 255, 255);
-    private static final int GRAY = Color.fromRGBA(175, 175, 175, 255);
-    private static final int RED = Color.fromRGBA(225, 25, 25, 255);
-
     private static final List<Credit> credits = new ArrayList<>();
+
+    private TitleScreenCredits() {
+    }
 
     private static void init() {
         // Add addons
@@ -35,7 +40,7 @@ public class TitleScreenCredits {
         for (MeteorAddon addon : AddonManager.ADDONS) add(addon);
 
         // Sort by width (Meteor always first)
-        credits.sort(Comparator.comparingInt(value -> value.sections.get(0).text.equals("Meteor Client ") ? Integer.MIN_VALUE : -value.width));
+        credits.sort(Comparator.comparingInt(value -> value.addon == MeteorClient.ADDON ? Integer.MIN_VALUE : -mc.textRenderer.getWidth(value.text)));
 
         // Check for latest commits
         MeteorExecutor.execute(() -> {
@@ -43,12 +48,35 @@ public class TitleScreenCredits {
                 if (credit.addon.getRepo() == null || credit.addon.getCommit() == null) continue;
 
                 GithubRepo repo = credit.addon.getRepo();
-                Response res = Http.get(String.format("https://api.github.com/repos/%s/branches/%s", repo.getOwnerName(), repo.branch())).sendJson(Response.class);
+                Http.Request request = Http.get("https://api.github.com/repos/%s/branches/%s".formatted(repo.getOwnerName(), repo.branch()));
+                request.exceptionHandler(e -> MeteorClient.LOG.error("Could not fetch repository information for addon '%s'.".formatted(credit.addon.name), e));
+                repo.authenticate(request);
+                HttpResponse<Response> res = request.sendJsonResponse(Response.class);
 
-                if (res != null && !credit.addon.getCommit().equals(res.commit.sha)) {
-                    synchronized (credit.sections) {
-                        credit.sections.add(1, new Section("*", RED));
-                        credit.calculateWidth();
+                switch (res.statusCode()) {
+                    case Http.UNAUTHORIZED -> {
+                        String message = "Invalid authentication token for repository '%s'".formatted(repo.getOwnerName());
+                        mc.getToastManager().add(new MeteorToast(Items.BARRIER, "GitHub: Unauthorized", message));
+                        MeteorClient.LOG.warn(message);
+                        if (System.getenv("meteor.github.authorization") == null) {
+                            MeteorClient.LOG.info("Consider setting an authorization " +
+                                "token with the 'meteor.github.authorization' environment variable.");
+                            MeteorClient.LOG.info("See: https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/managing-your-personal-access-tokens");
+                        }
+                    }
+                    case Http.FORBIDDEN -> {
+                        MeteorClient.LOG.warn("Could not fetch updates for addon '%s': Rate-limited by GitHub.".formatted(credit.addon.name));
+                    }
+                    case Http.NOT_FOUND -> {
+                        MeteorClient.LOG.warn("Could not fetch updates for addon '%s': GitHub repository '%s' not found.".formatted(credit.addon.name, repo.getOwnerName()));
+                    }
+                    case Http.SUCCESS -> {
+                        if (!credit.addon.getCommit().equals(res.body().commit.sha)) {
+                            synchronized (credit.text) {
+                                credit.text.append(Text.literal("*").formatted(Formatting.RED));
+                                ((IText) credit.text).meteor$invalidateCache();
+                            }
+                        }
                     }
                 }
             }
@@ -58,33 +86,29 @@ public class TitleScreenCredits {
     private static void add(MeteorAddon addon) {
         Credit credit = new Credit(addon);
 
-        credit.sections.add(new Section(addon.name, addon.color.getPacked()));
-        credit.sections.add(new Section(" by ", GRAY));
+        credit.text.append(Text.literal(addon.name).styled(style -> style.withColor(addon.color.getPacked())));
+        credit.text.append(Text.literal(" by ").formatted(Formatting.GRAY));
 
         for (int i = 0; i < addon.authors.length; i++) {
             if (i > 0) {
-                credit.sections.add(new Section(i == addon.authors.length - 1 ? " & " : ", ", GRAY));
+                credit.text.append(Text.literal(i == addon.authors.length - 1 ? " & " : ", ").formatted(Formatting.GRAY));
             }
 
-            credit.sections.add(new Section(addon.authors[i], WHITE));
+            credit.text.append(Text.literal(addon.authors[i]).formatted(Formatting.WHITE));
         }
 
-        credit.calculateWidth();
         credits.add(credit);
     }
 
-    public static void render(MatrixStack matrices) {
+    public static void render(DrawContext context) {
         if (credits.isEmpty()) init();
 
         int y = 3;
         for (Credit credit : credits) {
-            int x = mc.currentScreen.width - 3 - credit.width;
+            synchronized (credit.text) {
+                int x = mc.currentScreen.width - 3 - mc.textRenderer.getWidth(credit.text);
 
-            synchronized (credit.sections) {
-                for (Section section : credit.sections) {
-                    mc.textRenderer.drawWithShadow(matrices, section.text, x, y, section.color);
-                    x += section.width;
-                }
+                context.drawTextWithShadow(mc.textRenderer, credit.text, x, y, -1);
             }
 
             y += mc.textRenderer.fontHeight + 2;
@@ -94,9 +118,14 @@ public class TitleScreenCredits {
     public static boolean onClicked(double mouseX, double mouseY) {
         int y = 3;
         for (Credit credit : credits) {
-            int x = mc.currentScreen.width - 3 - credit.width;
+            int width;
+            synchronized (credit.text) {
+                width = mc.textRenderer.getWidth(credit.text);
+            }
 
-            if (mouseX >= x && mouseX <= x + credit.width && mouseY >= y && mouseY <= y + mc.textRenderer.fontHeight + 2) {
+            int x = mc.currentScreen.width - 3 - width;
+
+            if (mouseX >= x && mouseX <= x + width && mouseY >= y && mouseY <= y + mc.textRenderer.fontHeight + 2) {
                 if (credit.addon.getRepo() != null && credit.addon.getCommit() != null) {
                     mc.setScreen(new CommitsScreen(GuiThemes.get(), credit.addon));
                     return true;
@@ -111,27 +140,10 @@ public class TitleScreenCredits {
 
     private static class Credit {
         public final MeteorAddon addon;
-        public final List<Section> sections = new ArrayList<>();
-        public int width;
+        public final MutableText text = Text.empty();
 
         public Credit(MeteorAddon addon) {
             this.addon = addon;
-        }
-
-        public void calculateWidth() {
-            width = 0;
-            for (Section section : sections) width += section.width;
-        }
-    }
-
-    private static class Section {
-        public final String text;
-        public final int color, width;
-
-        public Section(String text, int color) {
-            this.text = text;
-            this.color = color;
-            this.width = mc.textRenderer.getWidth(text);
         }
     }
 
